hphp/hack/test/typecheck/expression_trees/nested_expression_trees.php.exp
File "nested_expression_trees.php", line 6, characters 16-28:
Expression trees may not be nested. Consider assigning to a local variable and splicing the local variable in. (Parsing[1002])
